# lap-test

./: .env  Cargo.toml  README.md
migrations/2023-09-14-095209_uuid-extention/: down.sql
migrations/2023-09-14-095251_users/: up.sql
src/: main.rs  schema.rs
